5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1582_1560.log
== TEST (2019-04-14 11:58:00) 
-- CODE:
chatodimais = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra.)
>print (chatodimais.lower())
-- ERROR:
File "XXXX", line 1
    chatodimais = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra.)
                                                                                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:58:26) 
-- CODE:
chatodimais = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra.)
print (chatodimais.lower())
-- ERROR:
File "XXXX", line 1
    chatodimais = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra.)
                                                                                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 11:58:54) 
-- CODE:
chatodimais = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra.)

print (chatodimais.lower())
-- ERROR:
File "XXXX", line 1
    chatodimais = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra.)
                                                                                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:00:24) 
-- CODE:
chatodimais = "\"Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra."\)

print (chatodimais.lower())
-- ERROR:
File "XXXX", line 1
    chatodimais = "\"Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra."\)
                                                                                               ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:00:56) 
-- CODE:
chatodimais = "\"Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra."\")

print (chatodimais.lower())
-- ERROR:
File "XXXX", line 1
    chatodimais = "\"Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra."\")
                                                                                                ^
SyntaxError: unexpected character after line continuation character
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:49:11) 
-- CODE:
chatodimais = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra."

print (chatodimais.lower())
-- OUTPUT:
augusta ada byron, a condesa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:49:23) 
-- CODE:
chatodimais = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra."

print (chatodimais.lower())
-- EXECUTION TIME:
0.143106
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condesa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:49:29) 
-- CODE:
chatodimais = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815, na Inglaterra."

print (chatodimais.lower())
-- OUTPUT:
augusta ada byron, a condesa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-14 12:49:58) 
-- CODE:
chatodimais = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."

print (chatodimais.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-14 12:50:05) 
-- CODE:
chatodimais = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."

print (chatodimais.lower())
-- EXECUTION TIME:
0.185055
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
